# Re-Source

./: .gitignore  README.md  arduino.cpp  dashboard.py  database_template.sql  db_operations.py  login.py  main.py  pyproject.toml  requirements.txt  timeseries_model.py
static/css/: style.css
synthetic_data/: synthetic_consumption_data.py  synthetic_power_data.py
templates/: dashboard.html  login.html  main_page.html
