[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "re-source"
version = "0.1.0"
description = "Flask web app for energy data ingestion, visualization and forecasting"
readme = "README.md"
requires-python = ">=3.13"
authors = [ { name = "Pawel Cholewa" } ]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://example.org/"

dependencies = [
    "Flask>=2.0",
    "Werkzeug>=2.1",
    "psycopg2-binary>=2.9",
    "pandas>=1.5",
    "numpy>=1.23",
    "statsmodels>=0.14",
    "requests>=2.28"
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"" = ["templates/*", "static/*"]
